# sly_static

./: Cargo.toml  README.md
sly_static/: Cargo.toml
sly_static/src/: lib.rs
sly_static_macros/: Cargo.toml
sly_static_macros/src/: lib.rs
