[package]
name = "sly_static"
version = "1.0.2"
authors = ["Srlion <srlion32@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Seamless Rust Static Initialization: Effortless and Efficient"
keywords = ["static", "init", "lazy", "global", "macro"]
repository = "https://github.com/Srlion/sly_static"
readme = "../README.md"
categories = ["no-std", "rust-patterns", "memory-management"]

[dependencies]
sly_static_macros = { path = "../sly_static_macros", version = "1.0.0" }
linkme = "0.3.23"
