[package]
name = "sly_static_macros"
version = "1.1.0"
edition = "2021"
license = "MIT"
description = "macros for sly_static"
authors = ["Srlion <srlion32@gmail.com>"]
repository = "https://github.com/Srlion/sly_static"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }
